--- a/prova/public/css/estilo_basico.css
+++ b/prova/public/css/estilo_basico.css
@@ -158,6 +158,13 @@ button:hover {
     text-align: center;
 }
 
+.titulo-pagina-2 {
+    padding: 70px 0px 10px 0px;
+    margin-bottom: 10px;
+    background-color: #2a9ee2;
+    text-align: center;
+}
+
 .informacao-pagina {
     text-align: center;
     margin-top: 30px;
@@ -177,7 +184,7 @@ button:hover {
     float: left;
     text-align: center;
     background-color: #f8f8f8;
-    height: 250px;
+    height: 8em;
 }
 
 .redes-sociais, .area-contato, .localizacao p, span {
