--- a/prova/public/css/estilo_basico.css
+++ b/prova/public/css/estilo_basico.css
@@ -149,7 +149,7 @@ button:hover {
     width: 100%;
     height: 100%;
     text-align: center;
-    margin-bottom: 100px;
+    margin-bottom: 12em;
 }
 
 .titulo-pagina {
@@ -197,4 +197,34 @@ button:hover {
 
 .th-normal {
     font-weight: normal;
+}
+
+.a-bt-editar {
+    display: block;
+    width: 93%;
+    height: 1em;
+    line-height: 18px;
+    padding: 0.2em 0.2em;
+    background-color: green;
+    color: #FFF;
+    border-radius: 5px;
+    text-decoration: none;
+    text-align: center;
+    font-weight: bold;
+    font-family: Arial;
+}
+
+.a-bt-excluir {
+    display: block;
+    width: 93%;
+    height: 1em;
+    line-height: 18px;
+    padding: 0.2em 0.2em;
+    background-color: red;
+    color: #FFF;
+    border-radius: 5px;
+    text-decoration: none;
+    text-align: center;
+    font-weight: bold;
+    font-family: Arial;
 }
